@@ -1,3 +1,4 @@
+* Add PYSON Widget
 * Add CSV Import/Export
 * Manage translated field
 * Add favorites menu
